made smart caching and fixed overflows

--- a/src/styles/reset.css
+++ b/src/styles/reset.css
@@ -13,6 +13,7 @@ body {
 	line-height: 1.5;
 	-webkit-font-smoothing: antialiased;
 	font-family: 'Noto Sans';
+	overflow: hidden auto;
 }
 img,
 picture,
